# yaml2xml

./: README.md  meson.build  rc.xml  rc.yaml  xml2yaml.c  yaml2xml.c
